--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,10 @@
-
+:root {
+  --lightgreen: darkolivegreen;
+  --cream: #dfda9a;
+  --darkgreen: #3b4b21;
+  --tanaccent: darkkhaki;
+  --backgroundwhite: azure;
+}
 
 * {
   margin: 0;
@@ -6,14 +12,14 @@
 }
 
 body {
-  background-color: azure;
+  background-color: var(--backgroundwhite);
 }
 
 header {
   height: 90px;
   width: 100%;
-  background-color: darkolivegreen;
-  border-bottom: 10px double darkkhaki;
+  background-color: var(--lightgreen);
+  border-bottom: 10px double var(--tanaccent);
   display: flex;
   position: fixed;
   z-index: 999;
@@ -22,8 +28,9 @@ header {
 h1 {
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 50px;
-  padding: 10px;
+  padding: 10px 10px 10px 20px;
   line-height: 70px;
+  color: var(--cream);
 }
 
 h2 {
@@ -35,8 +42,10 @@ h2 {
 h3 {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 40px;
-  padding: 10px;
+  padding: 20px;
   line-height: normal;
+  font-weight: lighter;
+  color: var(--cream);
 }
 
 p {
@@ -52,14 +61,19 @@ p {
   justify-content: space-between;
 }
 
+#navbar ul {
+  padding-right: 20px;
+}
+
 #navbar ul li {
   display: inline-flex;
 }
 
 #navbar a {
   text-decoration: none;
-  color: black;
+  color: var(--cream);
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 20px;
   padding: 10px;
 }
 
@@ -68,32 +82,34 @@ main {
 }
 
 #about-me div {
-  padding: 20px;
+  padding: 15px 70px 20px 30px;
 }
 
 #about-me {
+  display: flex;
   height: fit-content;
   width: 100%;
-  background-color: darkkhaki;
+  background-color: var(--tanaccent);
   padding-bottom: 10px;
   display: flex;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  border-bottom: #3b4b21 solid 5px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  border-bottom: var(--darkgreen) solid 5px;
 }
 
 #about-me img {
-  width: 250px;
+  width: 315px;
+  height: 315px;
   object-fit: contain;
   padding: 5px;
   border: 5px solid black;
   border-radius: 5px;
-  margin: 20px;
+  margin: 25px 30px 25px 50px;
 }
 
 #my-work {
   display: flex;
-  padding: 40px 20px;
+  padding: 50px 20px;
 }
 
 #work-1 {
@@ -101,6 +117,7 @@ main {
   flex-direction: column;
   justify-content: space-evenly;
   width: 800px;
+  padding-left: 15px;
 }
 
 #work-1 h2 {
@@ -110,7 +127,7 @@ main {
 
 #big-card {
   margin: 5px;
-  border: 3px solid #3b4b21;
+  border: 3px solid var(--darkgreen);
   border-radius: 2px;
 }
 
@@ -129,7 +146,7 @@ main {
   width: 250px;
   height: fit-content;
   margin: 5px;
-  border: 3px solid #3b4b21;
+  border: 3px solid var(--darkgreen);
   border-radius: 2px;
 }
 
@@ -140,59 +157,63 @@ main {
 
 figure {
   position: relative;
-  background-color: #3b4b21;
+  background-color: var(--darkgreen);
 }
 
 figcaption a{
   position: absolute;
   bottom: 0px;
-  background-color: #3b4b21;
+  background-color: var(--darkgreen);
   text-align: center;
   padding: 10px 0px;
   width: 100%;
   text-decoration: none;
-  color: black;
+  color: var(--cream);
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 footer {
   width: 100%;
-  height: 400px;
-  padding: 20px 0px;
+  height: 350px;
   display: flex;
-  flex-direction: column;
-  background-color: darkolivegreen;
-  border-top: 10px double darkkhaki;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: var(--lightgreen);
+  border-top: 10px double var(--tanaccent);
+  border-bottom: var(--darkgreen) solid 20px;
 }
 
 footer h3 {
-  text-align: center;
+  display: inline;
 }
 
 #footer-links {
-  width: 100%;
+  width: 300px;
+  height: fit-content;
   display: flex;
   justify-content: space-evenly;
-  padding-top: 20px;
+  padding: 50px 20px;
+  border: solid var(--tanaccent) 4px;
+  border-radius: 30px;
+  background-color: var(--darkgreen);
 }
 
-#footer-links div {
-  width: 250px;
-  height: 150px;
-  background-color: #3b4b21;
-  border-radius: 10px;
-  border: 10px solid darkkhaki;
-  position: relative;
-  display: flex;
-  justify-content: center;
-
-}
-
-#footer-links div a {
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
   text-decoration: none;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  color: black;
-  font-size: 25px;
-  padding-top: 10px;
+  border-radius: 50%;
+  border: solid 2px var(--tanaccent);
 }
 
+.fa-github {
+  background-color: #171515;
+  color: white;
+}
+
+.fa-linkedin {
+  background-color: #0e76a8;
+  color: white;
+}
